feat(account-management): Adds account management support via the CLI (#10)
* fix(cli-login): wip for impl of a config provider and an auth provider

* feat(cli-login): impl of config provider and wip of auth provider with pkce

* fix(cli-login): lint-fix

* feat(cli-login): initialize config correctly and init main compliantn with cjs

* feat(cli-login): we can now authorize through propelauth and persist access token in cfg

* fix(cli-login): cleanup

* feat(cli-login): updated auth mgmt to store expries and calculate expiration. cleaned up provider

* fix(cli-login): lint

* feat(cli-login): big cleanup to make the provider be the access provider

* feat(cli-login): drive authentication state via authprovider

* feat(cli-login): fixed persistence logic for config and made env vars superceding

* fix(cli-login): lint

* feat(cli-login): added step to fetch or create account after accesstoken retrieved

* feat(cli-login): account command supercharged with multiple options

* feat(cli-login): updated api client to initialize with parameters including access token

* fix(cli-login): nit

* feat(cli-login): validated that code-based account creation works

* fix(cli-login): lint

* fix(cli-login): cleanup around checking account status and key validity

* fix(cli-login): use expiry from token correctly instead of guestimating expiration

* fix(cli-login): updated setting api url and api key instructions

* feat(cli-login): cleaned up login method to handle reauthentication gracefully and creation

* fix(cli-login): logging cleanup and fixed small bugs in healthcheck

* fix(cli-login): lint

* feat(cli-login): updated auth discovery endpoint
