# packages/onegrep-sdk/src/types.ts
@@ -29,6 +29,7 @@ export interface BinaryResultContent extends ResultContent {
 
 export type ToolCallResultContent = Array<ResultContent>
 
+export type AccountInformation = z.infer<typeof schemas.AccountInformation>
 export type BasePolicy = z.infer<typeof schemas.BasePolicy>
 export type ToolCustomProperties = z.infer<typeof schemas.ToolCustomProperties>
 export type ToolDetails = z.infer<typeof schemas.ToolDetails>
